cpp/test/Slice/errorDetection/RedefinitionAsEnum.err
RedefinitionAsEnum.ice:12 error: redefinition of `Class' as enum
