cpp/test/Slice/errorDetection/RedefinitionAsEnum.ice
// **********************************************************************
//
// Copyright (c) 2001
// MutableRealms, Inc.
// Huntsville, AL, USA
//
// All Rights Reserved
//
// **********************************************************************

class C { long l; };
enum C { A, B, C };
